--- a/css/typography.css
+++ b/css/typography.css
@@ -5,7 +5,7 @@ body {
 .nav-title {
   font-weight: 700;
   font-size: 24px;
-  background-color: #add8e6; /* Light blue */
+  /* background-color: #add8e6; /* Light blue */
 }
 
 .button-text {
