--- a/css/utilities.css
+++ b/css/utilities.css
@@ -35,7 +35,7 @@ a.icon-link:hover {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #add8e6; /* Light blue */
+  background-color: #D5B22A; /* Light blue */
 }
 
 .nav-title-link {
