--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(circle, #2DA9D2, #73C6E1); /* Circular gradient */
+  background: linear-gradient(to right, #CDCECD, #E7E6E7);
 }
 
 
